--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,4 +36,6 @@ jobs:
           echo test, and deploy your project.
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.9.3
+        with:
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
