--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,5 +37,5 @@ jobs:
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3.9.3
         with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          github_token: ${{ secrets.ACCESS_TOKEN }}
 
